<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testARouter"
        android:textAllCaps="false"
        android:onClick="testARouter"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/testOKHttp3"
        android:onClick="testOKHttp3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foregroundService"
        android:textAllCaps="false"
        android:onClick="foregroundService"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testThread"
        android:onClick="testThread"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testNotification"
        android:onClick="testNotification"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testNotification2"
        android:onClick="testNotification2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testToast"
        android:textAllCaps="false"
        android:onClick="testToast"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testSearchable"
        android:textAllCaps="false"
        android:onClick="testSearchable"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testSearchViewMenu"
        android:textAllCaps="false"
        android:onClick="testSearchViewMenu"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testSearchView"
        android:textAllCaps="false"
        android:onClick="testSearchView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testDrag"
        android:onClick="testDrag"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testRetrofit"
        android:textAllCaps="false"
        android:onClick="testRetrofit"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testDesignPattern"
        android:textAllCaps="false"
        android:onClick="testDesignPattern"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawTextOnPath"
        android:textAllCaps="false"
        android:onClick="drawTextOnPath"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customImageView"
        android:textAllCaps="false"
        android:onClick="customImageView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customCompoundControls"
        android:textAllCaps="false"
        android:onClick="customCompoundControls"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testTextView"
        android:textAllCaps="false"
        android:onClick="testTextView"/>


</LinearLayout>