<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testPageAdapterViewPager"
        android:textAllCaps="false"
        android:onClick="testPageAdapterViewPager"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testPageTransformViewPager"
        android:textAllCaps="false"
        android:onClick="testPageTransformViewPager"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testFragmentPageAdapterViewPager"
        android:textAllCaps="false"
        android:onClick="testFragmentPageAdapterViewPager"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testFragmentStatePageAdapterViewPager"
        android:textAllCaps="false"
        android:onClick="testFragmentStatePageAdapterViewPager"/>

</LinearLayout>