<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMVCArchitecture"
        android:textAllCaps="false"
        android:onClick="testMVCArchitecture"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMVPArchitecture"
        android:onClick="testMVPArchitecture"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMVVMArchitecture"
        android:onClick="testMVVMArchitecture"/>


</LinearLayout>