<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMatrixDemo1"
        android:textAllCaps="false"
        android:onClick="testMatrixDemo1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMatrixDemo2"
        android:textAllCaps="false"
        android:onClick="testMatrixDemo2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testMatrixDemo3"
        android:textAllCaps="false"
        android:onClick="testMatrixDemo3"/>
</LinearLayout>