<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/testAsyncTaskExecute"
        android:onClick="testAsyncTaskExecute"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/testAsyncTaskExecuteOnExecutor"
        android:onClick="testAsyncTaskExecuteOnExecutor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/testAsyncTaskLoader"
        android:onClick="testAsyncTaskLoader"/>

</LinearLayout>